Update renovate & minimum versions

--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
         "drupal/core-composer-scaffold": "11.1.4",
         "drupal/core-project-message": "11.1.4",
         "drupal/core-recommended": "11.1.4",
-        "drupal/gin": "^3.0@RC",
+        "drupal/gin": "^3.0",
         "drupal/potx": "^1.1",
         "drupal/token": "^1.15",
-        "drupal/ultimate_cron": "^2.0@alpha",
+        "drupal/ultimate_cron": "^2.0@beta",
         "drupal/view_custom_table": "^2.0",
         "drush/drush": "^13",
         "npm-asset/chart.js": "^4.4",
