Use dot env tag variables in renovate

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ NGINX_TAG=1.27-5.40.2
 VARNISH_TAG=6.0-4.19.1
 MEMCACHED_TAG=1-2.18.5
 PYTHON_TAG=3.13
+TRAEFIK_TAG=v3.3
 
 ### PROJECT SETTINGS
 PROJECT_NAME=jean-piarre-foucault
