Drupal Kernel mandatory ?

--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -30,6 +30,13 @@ jobs:
         run: |
           URL=$(php -r "
           require 'web/autoload.php';
+          require 'web/core/includes/bootstrap.inc';
+          require 'web/core/includes/common.inc';
+
+          \Drupal\Core\DrupalKernel::bootEnvironment('web');
+          $kernel = new \Drupal\Core\DrupalKernel('prod', new \Symfony\Component\DependencyInjection\ContainerBuilder());
+          $kernel->boot();
+
           echo \Drupal\jpf_import\Api\Sto::buildDownloadUrl(\Drupal\jpf_store\Enum\Versions::Fifth);
           ")
           echo "ZIP_URL=$URL" >> $GITHUB_ENV
