--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -29,6 +29,9 @@ jobs:
         with:
           version: '11.1.4'
 
+      - name: Test Drupal installation
+        run: drush st
+
       - name: Get ZIP file URL from PHP
         id: get_zip_url
         run: |
