WIP with mariadb

--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -9,6 +9,22 @@ jobs:
   update-data:
     runs-on: ubuntu-latest
 
+    services:
+      mariadb:
+        image: mariadb:11.4.5
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: drupal
+          MYSQL_USER: drupal
+          MYSQL_PASSWORD: drupal
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping -h 127.0.0.1 --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -29,10 +45,10 @@ jobs:
           cp ".docker/files/settings.php.default" "web/sites/default/settings.php"
 
       - name: Setup Drupal
-        uses: bluehorndigital/setup-drupal@v1.1.0
-        with:
-          version: '11.1.4'
-          dependencies: 'jpf_import/jpf_import'
+        run: drush st
+#         uses: bluehorndigital/setup-drupal@v1.1.0
+#         with:
+#           version: '11.1.4'
 
       - name: Get ZIP file URL from PHP
         id: get_zip_url
