--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -19,13 +19,12 @@ jobs:
           MYSQL_PASSWORD: drupal
         ports:
           - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping -h 127.0.0.1 --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
 
     steps:
+      - name: Check MariaDB logs
+        if: failure()
+        run: docker logs $(docker ps -aqf "name=mariadb")
+
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
