--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -21,10 +21,6 @@ jobs:
           - 3306:3306
 
     steps:
-      - name: Check MariaDB logs
-        if: failure()
-        run: docker logs $(docker ps -aqf "name=mariadb")
-
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -44,7 +40,7 @@ jobs:
           cp ".docker/files/settings.php.default" "web/sites/default/settings.php"
 
       - name: Setup Drupal
-        run: drush st
+        run: vendor/bin/drush st
 #         uses: bluehorndigital/setup-drupal@v1.1.0
 #         with:
 #           version: '11.1.4'
