--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -34,25 +34,13 @@ jobs:
       - name: Setup project
         run: |
           cp ".env.example" ".env"
+          sed -i 's/^DB_HOST=.*/DB_HOST=127.0.0.1/' .env
           sudo rm -Rf web/sites
           composer install --no-progress --prefer-dist --optimize-autoloader
           mkdir -p "web/sites/default"
           cp ".docker/files/settings.php.default" "web/sites/default/settings.php"
 
-#       - name: Test MariaDB connection
-#         run: |
-#           mysql -h mariadb -u drupal -pdrupal -e "SHOW DATABASES;"
-
-      - name: Wait for MariaDB to be ready
-        run: sleep 20
-
-      - name: Check running containers
-        run: docker ps -a
-
-      - name: Debug Drush
-        run: vendor/bin/drush sql:connect --debug
-
-      - name: Test MariaDB connection (alternative)
+      - name: Test MariaDB connection
         run: |
           mysql -h 127.0.0.1 -u drupal -pdrupal -e "SHOW DATABASES;"
 
