--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,9 +129,9 @@ jobs:
         with:
           python-version: '3.13'
           cache: 'pip'
-        run: |
-          pip install -r .docker/python/requirements
-          python python/jean-pyarre/jean-pyarre.py
+      - run: |
+        pip install -r .docker/python/requirements
+        python python/jean-pyarre/jean-pyarre.py
 
       - name: PyCharm Python Security Scanner
         uses: tonybaloney/pycharm-security@1.25.1
