--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -86,5 +86,5 @@ jobs:
           add: 'web/modules/custom/jpf_store/assets/doc/*'
           author_name: update-data[bot]
           author_email: update-data@users.noreply.github.com
-          commit: --signoff
+          commit: --signoff -n
           message: 'Update data'
