--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,9 +132,11 @@ jobs:
         with:
           python-version: '3.13'
 
-      - run: |
-          pip install -r .docker/python/requirements
-          python python/jean-pyarre/jean-pyarre.py
+      - name: Install dependencies
+        run: pip install -r .docker/python/requirements
+
+      - name: Check Python app
+        run: python python/jean-pyarre/jean-pyarre.py --check
 
       - name: PyCharm Python Security Scanner
         uses: tonybaloney/pycharm-security@1.29.0
