Remove Qodana (I love you, but I hate your plan policies)

--- a/grumphp.yml
+++ b/grumphp.yml
@@ -132,8 +132,7 @@ grumphp:
         priority: 0
         task: null
     jsonlint:
-      ignore_patterns:
-        - qodana.sarif.json
+      ignore_patterns: []
       detect_key_conflicts: false
       metadata:
         blocking: true
