--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -26,27 +26,11 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.4'
+      - name: Setup PHP
+        uses: ./.github/actions/composite/php.yml
 
-      - name: Setup project
-        run: |
-          cp ".env.example" ".env"
-          sed -i 's/^DB_HOST=.*/DB_HOST=127.0.0.1/' .env
-          sudo rm -Rf web/sites
-          composer install --no-progress --prefer-dist --optimize-autoloader
-          mkdir -p "web/sites/default"
-          cp ".docker/files/settings.php.default" "web/sites/default/settings.php"
-
-      - name: Test project install
-        run: |
-          vendor/bin/drush site-install 'minimal' --config-dir=../config/sync --account-name='admin' --account-pass='admin' --yes
-          vendor/bin/drush deploy
-          vendor/bin/drush locale-check
-          vendor/bin/drush locale-update
-          vendor/bin/drush cr
+      - name: Setup & install project
+        uses: ./.github/actions/composite/project.yml
 
       - name: Test data fill
         run: |
