--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -27,10 +27,10 @@ jobs:
           fetch-depth: 0
 
       - name: Setup PHP
-        uses: ./.github/actions/composite/php.yml
+        uses: ./.github/actions/php
 
       - name: Setup & install project
-        uses: ./.github/actions/composite/project.yml
+        uses: ./.github/actions/project
 
       - name: Test data fill
         run: |
