--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,9 @@ jobs:
           git config --global core.autocrlf false
           git config --global core.eol lf
 
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup composer
         uses: ./.github/actions/composer
   php:
