Fix xdebug new vars

--- a/compose.yml
+++ b/compose.yml
@@ -50,7 +50,9 @@ services:
       PHP_IDE_CONFIG: $PHP_IDE_CONFIG
       PHP_XDEBUG_LOG: /tmp/php-xdebug.log
       PHP_XDEBUG_REMOTE_LOG: /tmp/php-xdebug.log
-      XDEBUG_CONFIG: $XDEBUG_CONFIG
+      PHP_XDEBUG_CLIENT_HOST: $PHP_XDEBUG_CLIENT_HOST
+      PHP_XDEBUG_CLIENT_PORT: $PHP_XDEBUG_CLIENT_PORT
+      PHP_XDEBUG_DISCOVER_CLIENT_HOST: $PHP_XDEBUG_DISCOVER_CLIENT_HOST
       WODBY_USER_ID: $WODBY_USER_ID
       WODBY_GROUP_ID: $WODBY_GROUP_ID
       TIMEZONE: $TIMEZONE
