--- a/.env.example
+++ b/.env.example
@@ -38,4 +38,6 @@ NGINX_VHOST_PRESET=drupal11
 PHP_XDEBUG_MODE=debug
 PHP_IDE_CONFIG="serverName=my-ide"
 PHP_XDEBUG_START_WITH_REQUEST=yes
-XDEBUG_CONFIG="client_host=host.docker.internal client_port=9003"
+PHP_XDEBUG_CLIENT_HOST=host.docker.internal
+PHP_XDEBUG_CLIENT_PORT=9003
+PHP_XDEBUG_DISCOVER_CLIENT_HOST=0
