--- a/compose.yml
+++ b/compose.yml
@@ -53,6 +53,8 @@ services:
       PHP_XDEBUG_CLIENT_HOST: $PHP_XDEBUG_CLIENT_HOST
       PHP_XDEBUG_CLIENT_PORT: $PHP_XDEBUG_CLIENT_PORT
       PHP_XDEBUG_DISCOVER_CLIENT_HOST: $PHP_XDEBUG_DISCOVER_CLIENT_HOST
+      PHP_XDEBUG_IDEKEY: $PHP_XDEBUG_IDEKEY
+      DRUSH_ALLOW_XDEBUG: $DRUSH_ALLOW_XDEBUG
       WODBY_USER_ID: $WODBY_USER_ID
       WODBY_GROUP_ID: $WODBY_GROUP_ID
       TIMEZONE: $TIMEZONE
