--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,5 @@ PHP_XDEBUG_START_WITH_REQUEST=yes
 PHP_XDEBUG_CLIENT_HOST=host.docker.internal
 PHP_XDEBUG_CLIENT_PORT=9003
 PHP_XDEBUG_DISCOVER_CLIENT_HOST=0
+PHP_XDEBUG_IDEKEY=PHPSTORM
+DRUSH_ALLOW_XDEBUG=1
